--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "materialize-css": "^1.0.0",
+    "mysql": "^2.16.0",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
   },
