--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "blogger",
+    "password": "R!zzo99886",
+    "database": "doctor_who",
     "host": "127.0.0.1",
     "port": 3306,
     "dialect": "mysql"
