--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Password1!",
+    "password": "R!zzo99886",
     "database": "blogger",
     "host": "127.0.0.1",
     "port": 3306,
